--- a/closure/closure.html
+++ b/closure/closure.html
@@ -7,8 +7,7 @@
 			<link rel="stylesheet" href="">
 	</head>
 	<body>
-		
-
+        <h3>mactive</h3>
 	<script type="text/javascript">
 	
 	function outter(arg1) {
@@ -22,9 +21,8 @@
 
 	var a = outter(1); // a is function
 	b = a(4);
-	console.log(a);
-	console.log(b);
-
+//	console.log(a);
+//	console.log(b);
 	</script>
 	</body>
 </html>
